added nav classes to header

--- a/html_theme-template/index.html
+++ b/html_theme-template/index.html
@@ -15,13 +15,13 @@
                 <span class="fs-4">Site Title</span>
               </a>
               <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/front-page.html" class="nav-link" aria-current="page">Front page</a></li>
+                <li class="nav-item"><a href="./front-page.html" class="nav-link" aria-current="page">Front page</a></li>
                 <li class="nav-item"><a href="#" class="nav-link active">Blog</a></li>
-                <li class="nav-item"><a href="/page.html" class="nav-link">Page</a></li>
-                <li class="nav-item"><a href="/single.html" class="nav-link">Single Post</a></li>
-                <li class="nav-item"><a href="/archive.html" class="nav-link">Archive</a></li>
-                <li class="nav-item"><a href="/search.html" class="nav-link">Search</a></li>
-                <li class="nav-item"><a href="/404.html" class="nav-link">404</a></li>
+                <li class="nav-item"><a href="./page.html" class="nav-link">Page</a></li>
+                <li class="nav-item"><a href="./single.html" class="nav-link">Single Post</a></li>
+                <li class="nav-item"><a href="./archive.html" class="nav-link">Archive</a></li>
+                <li class="nav-item"><a href="./search.html" class="nav-link">Search</a></li>
+                <li class="nav-item"><a href="./404.html" class="nav-link">404</a></li>
               </ul>
         </header>
 
